--- a/app/styles/results.css
+++ b/app/styles/results.css
@@ -80,14 +80,14 @@
 
 li {list-style-type: none;}
 
-.movie-btn {
+.movie-btn { 
+  padding: 0 10px 0 10px;
   background-color: #fff;
   color: #212F52;
-  padding: 15px 32px;
+  /* padding: 15px 32px; */
   font-weight: 800;
   font-size: 18px;
   line-height: 30px;
-  text-align: center;
   text-decoration: none;
   margin: 4px 2px;
   cursor: pointer;
@@ -96,15 +96,37 @@ li {list-style-type: none;}
   width: 312px;
   transition: all 0.2s ease-in-out;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  justify-items: start;
+  align-items: start;
+  /* justify-content: space-evenly;
+  align-content: space-evenly; */
 }
 
-.copy-icon {
-  position: relative;
-  display: inline-block;
-  left: 72px;
+.btn-items{
+  display: grid;
+  gap: 1rem;
+  grid-auto-flow: column;
+  justify-content: start;
+  align-items: center;
+  justify-items: start;
+  align-content: space-evenly;
+  height: 60px;
+  text-align: left;
+}
+
+.poster-in-button{
+  margin-top: 8px;
+  width: 100%;
+  height: 60px;
+  justify-items: start;
+}
+
+.title-in-button{
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: 200px;
+  justify-items: start;
 }
 
 .glow-button:hover {
